# bitbots_vision

./: README.md
bitbots_gestures/: CMakeLists.txt  package.xml  setup.py
bitbots_gestures/include/: human_pose_estimator.hpp  node.hpp  ocv_common.hpp
bitbots_gestures/msg/: HumanPoseArray.msg  HumanPoseEstimation.msg
bitbots_gestures/src/: human_pose_estimator.cpp  node.cpp  peak.cpp
bitbots_gestures/src/bitbots_gestures/: gesture_recognition.py  model.pth
bitbots_vision/: CMakeLists.txt  package.xml
bitbots_vision/bitbots_vision/: output_data4.json  vision.py
bitbots_vision/bitbots_vision/vision_modules/yoeo/: vision_components.py
bitbots_vision/cfg/: Vision.cfg  vision.cfg
bitbots_vision/config/: simparams.yaml  visionparams.yaml
bitbots_vision/config/color_spaces/: 14.yaml  GO2019_interpolated.pickle  f031_interpolated.pickle  f031_lightcontrol_interpolated.pickle  f031new_interpolated.pickle  f031test_interpolated.pickle  f132_interpolated.pickle  integrationtest_interpolated.pickle  simColor_interpolated.pickle  sydney_2_7_2019_interpolated.pickle
bitbots_vision/docs/manual/tutorials/: train_yolo.rst
bitbots_vision/launch/: vision.launch  vision_startup.launch
bitbots_vision/scripts/: auto_eval.py  auto_label.py  auto_plot.py  auto_train.py  auto_train.sh  colorpicker.py  combine-config-doc.py  compare-config-doc.py  evaluation_set_label.py  evaluator.py  imgclean.sh  models  runtime_graph.py  save.py  seg.py
bitbots_vision/src/bitbots_vision/: body_mask.py  dynamic_color_lookup_table.py  dynamic_color_space.py  vision.py
bitbots_vision/src/bitbots_vision/vision_modules/: body_mask_ball_candidate_filter.py  candidate.py  color.py  debug.py  evaluator.py  field_boundary.py  lines.py  obstacle.py  ros_utils.py  yolo_handler.py
bitbots_vision/test/unit_tests/: vision_testcase.py
bitbots_vision_tools/config/: evaluator_params.yaml
bitbots_vision_tools/launch/: bitbots_vision_evaluator.launch
bitbots_vision_tools/scripts/: color_space_substract.py  colorspace_tool.py  evaluator.py  imgclean.sh
