<package format="2">
  <name>bitbots_gestures</name>
  <description>
    Package to detect gestures using open pose and open vino.
  </description>

  <version>0.0.1</version>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>humanoid_league_speaker</depend>
  <depend>humanoid_league_msgs</depend>
  <depend>bitbots_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>white_balancer</depend>
  <depend>bitbots_bringup</depend>
  <depend>bitbots_docs</depend>
  <depend>tf2</depend>


  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
