<package format="2">
  <name>bitbots_vision</name>
  <description>
  </description>
  <version>1.1.0</version>

  <maintainer email="git@nfiedler.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="git@nfiedler.de">Niklas Fiedler</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>


  <export>
    <bitbots_documentation>
      <language>python3</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
